# chimney

./: .codespellrc  .gitignore  .mise.toml  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  version.sh
.claude/: settings.local.json
.github/workflows/: archive.yml  release.yml  test.yml
crates/chimney/: Cargo.toml
crates/chimney-cli/: Cargo.toml
crates/chimney-cli/src/: cli.rs  error.rs  format.rs  main.rs
crates/chimney-core/: Cargo.toml
crates/chimney-core/src/: error.rs  lib.rs  server.rs
crates/chimney-core/src/config/: format.rs  macros.rs  mod.rs  sample.toml  toml.rs  types.rs
crates/chimney-core/src/config/types/: certificate.rs  config.rs  domain.rs  log.rs  mod.rs  site.rs
crates/chimney-core/src/filesystem/: local.rs  mock.rs  mod.rs
crates/chimney-core/src/server/: mimetype.rs  mod.rs  redirect.rs  resolver.rs  server.rs  service.rs
crates/chimney-core/src/tls/: acceptor.rs  acme.rs  cache.rs  cert_request.rs  config.rs  manual.rs  mod.rs
crates/chimney-core/tests/: cert_request.rs  domain.rs  filesystem.rs  host_strategy.rs  mimetype.rs  path_resolution.rs  redirect.rs  server.rs  site_builder.rs  tls_acceptor.rs  tls_cache.rs  tls_config.rs  tls_manual.rs  toml_config.rs
example/: chimney.toml
example/public/: another_page.html  index.html
examples/basic/: chimney.toml
examples/basic/public/: project.json
examples/multi/: chimney.toml
examples/multi/sites/: trulyao
examples/trulyao/: 404.html  chimney.toml  index.html
examples/trulyao/_astro/: LiveActivity.7a0d3b3b.js  blog.5892c12e.css  blog.6c5f9381.css  client.802dacf3.js
examples/trulyao/blog/: index.html
examples/trulyao/blog/a-gleamy-exploration/: index.html
examples/trulyao/blog/arguments/: index.html
examples/trulyao/blog/attack/: index.html
examples/trulyao/blog/good-enough/: index.html
examples/trulyao/blog/my-stack-2024/: index.html
examples/trulyao/blog/not-ready/: index.html
examples/trulyao/blog/pilot/: index.html
examples/trulyao/blog/what-about-reda/: index.html
examples/trulyao/fate/: index.html
examples/trulyao/live/: index.html
internal/config/: config.go
sites/: chimney.old.toml  chimney.toml
sites/counter/: chimney.toml  index.html  main.js  style.css
sites/mixed/: 404.html  another_page.html  chimney.toml  main.html  project.json
sites/mixed/.well-known/: verify.txt
src/: .server.rs.rustfmt  commands.rs  config.rs  error.rs  lib.rs  log_macros.rs  main.rs  mimetype.rs  server.rs
src/commands/: commands.rs  mod.rs
src/config/: config.rs
src/server/: mod.rs  server.rs  tokio_rt.rs
test-https/: ACME-TESTING.md  README.md  acme-example.toml  chimney.toml  localhost-cert.pem  localhost-key.pem  run.sh
test-https/sites-acme/example/: chimney.toml
test-https/sites-acme/example/public/: index.html
test-https/sites/localhost/: chimney.toml
test-https/sites/localhost/public/: index.html
tests/: config.rs  server.rs
