[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Ayodeji O. <ayodeji@trulyao.dev>"]
edition = "2024"
description = "Yet another static file server for the modern web."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/aosasona/chimney"
repository = "https://github.com/aosasona/chimney"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.45.1" }
bytes = "1.10.1"
chrono = "0.4.41"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.12", features = ["tokio"] }
toml = { version = "0.8.22" }
