[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Ayodeji O. <ayodeji@trulyao.dev>"]
edition = "2024"
description = "Yet another static file server for the modern web."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/aosasona/chimney"
repository = "https://github.com/aosasona/chimney"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.45.1", features = [
	"net",
	"fs",
	"macros",
	"rt",
	"rt-multi-thread",
	"sync",
	"signal",
	"time",
] }
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = { version = "0.11.0" }
http-body-util = { version = "0.1.3" }
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.12", features = [
	"tokio",
	"server-auto",
	"server-graceful",
] }
log = { version = "0.4.27" }
toml = { version = "0.8.22" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { version = "2.0.12" }
url = { version = "2.5.4" }
