[package]
name = "chimney-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chimney = { path = "../chimney-core" }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
thiserror = { workspace = true }
