[package]
name = "chimney"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
toml = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
default = ["toml"]
toml = ["dep:toml"]
