[package]
name = "chimney"
version = "1.0.0"
edition = "2024"
description = "Rust library for building static file servers based on the Chimney core."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aosasona/chimney"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

# TLS and ACME support
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls-acme = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["toml"]
toml = ["dep:toml"]
